--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <script
-      src="https://kit.fontawesome.com/78c72d8c86.js"
-      crossorigin="anonymous"
-    ></script>
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
       :root {
         --message-bg-light: rgba(255, 255, 255, 0.95);
@@ -354,6 +356,11 @@
                   </p>
                 </div>
               </div>
+              <div class="row mt-3">
+                <div class="col">
+                  <canvas id="statsChart" height="150"></canvas>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -365,7 +372,6 @@
       <div id="alertMessage" class="text-center" role="alert"></div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="roulette.js"></script>
     <script>
       // Fonction pour basculer le thème
@@ -394,6 +400,46 @@
         const totalCount = document.getElementById("totalCount");
         const baseUnitInput = document.getElementById("baseUnitInput");
         const setBaseUnitButton = document.getElementById("setBaseUnitButton");
+
+        // Initialisation du graphique
+        const ctx = document.getElementById("statsChart").getContext("2d");
+        const statsChart = new Chart(ctx, {
+          type: "bar",
+          data: {
+            labels: ["Rouges", "Noirs"],
+            datasets: [
+              {
+                data: [0, 0],
+                backgroundColor: ["#dc3545", "#212529"],
+                borderColor: ["#dc3545", "#212529"],
+                borderWidth: 1,
+              },
+            ],
+          },
+          options: {
+            responsive: true,
+            maintainAspectRatio: false,
+            plugins: {
+              legend: {
+                display: false,
+              },
+            },
+            scales: {
+              y: {
+                beginAtZero: true,
+                ticks: {
+                  stepSize: 1,
+                },
+              },
+            },
+          },
+        });
+
+        // Fonction de mise à jour du graphique
+        function updateChart(redCount, blackCount) {
+          statsChart.data.datasets[0].data = [redCount, blackCount];
+          statsChart.update();
+        }
 
         // Validation en temps réel du champ de saisie
         numberInput.addEventListener("input", function () {
@@ -445,6 +491,9 @@
           redCount.textContent = analysis.redCount;
           blackCount.textContent = analysis.blackCount;
           totalCount.textContent = resultsDisplay.children.length; // Compte simplement le nombre de cellules
+
+          // Mise à jour du graphique
+          updateChart(analysis.redCount, analysis.blackCount);
 
           // Mise à jour de l'alerte et des recommandations
           alertArea.style.display = "block";
