fix: Correction de la fonction d'annulation
- Sauvegarde de l'état avant chaque nouveau numéro
- Restauration précise de l'état lors de l'annulation
- Maintien du pattern 6-6 et des mises après annulation

--- a/index.html
+++ b/index.html
@@ -316,6 +316,9 @@
             <button class="btn btn-primary" id="addButton" disabled>
               Ajouter
             </button>
+            <button class="btn btn-warning" id="undoButton" disabled>
+              <i class="fas fa-undo"></i>
+            </button>
           </div>
         </div>
       </div>
@@ -373,202 +376,6 @@
     </div>
 
     <script src="roulette.js"></script>
-    <script>
-      // Fonction pour basculer le thème
-      function toggleTheme() {
-        const html = document.documentElement;
-        const currentTheme = html.getAttribute("data-bs-theme");
-        const newTheme = currentTheme === "dark" ? "light" : "dark";
-        html.setAttribute("data-bs-theme", newTheme);
-        localStorage.setItem("theme", newTheme);
-      }
-
-      // Restaurer le thème au chargement
-      document.addEventListener("DOMContentLoaded", () => {
-        const savedTheme = localStorage.getItem("theme") || "light";
-        document.documentElement.setAttribute("data-bs-theme", savedTheme);
-
-        const analyzer = new RouletteAnalyzer();
-        const numberInput = document.getElementById("numberInput");
-        const addButton = document.getElementById("addButton");
-        const navResetButton = document.getElementById("navResetButton");
-        const alertArea = document.getElementById("alertArea");
-        const alertMessage = document.getElementById("alertMessage");
-        const resultsDisplay = document.getElementById("resultsDisplay");
-        const redCount = document.getElementById("redCount");
-        const blackCount = document.getElementById("blackCount");
-        const totalCount = document.getElementById("totalCount");
-        const baseUnitInput = document.getElementById("baseUnitInput");
-        const setBaseUnitButton = document.getElementById("setBaseUnitButton");
-
-        // Initialisation du graphique
-        const ctx = document.getElementById("statsChart").getContext("2d");
-        const statsChart = new Chart(ctx, {
-          type: "bar",
-          data: {
-            labels: ["Rouges", "Noirs"],
-            datasets: [
-              {
-                data: [0, 0],
-                backgroundColor: ["#dc3545", "#212529"],
-                borderColor: ["#dc3545", "#212529"],
-                borderWidth: 1,
-              },
-            ],
-          },
-          options: {
-            responsive: true,
-            maintainAspectRatio: false,
-            plugins: {
-              legend: {
-                display: false,
-              },
-            },
-            scales: {
-              y: {
-                beginAtZero: true,
-                ticks: {
-                  stepSize: 1,
-                },
-              },
-            },
-          },
-        });
-
-        // Fonction de mise à jour du graphique
-        function updateChart(redCount, blackCount) {
-          statsChart.data.datasets[0].data = [redCount, blackCount];
-          statsChart.update();
-        }
-
-        // Validation en temps réel du champ de saisie
-        numberInput.addEventListener("input", function () {
-          const value = this.value;
-          const number = parseInt(value);
-
-          if (value === "" || isNaN(number) || number < 0 || number > 36) {
-            addButton.disabled = true;
-          } else {
-            addButton.disabled = false;
-          }
-        });
-
-        // Initialiser le bouton comme désactivé
-        addButton.disabled = true;
-
-        // Gestionnaire pour le changement de mise de base
-        setBaseUnitButton.addEventListener("click", () => {
-          const amount = parseFloat(baseUnitInput.value);
-          if (amount <= 0) {
-            alert("La mise de base doit être supérieure à 0");
-            return;
-          }
-          analyzer.setBaseBet(amount);
-          // Mettre à jour l'affichage avec les nouvelles valeurs
-          const results = analyzer.getCurrentResults();
-          const analysis = analyzer.analyze();
-          updateDisplay(results, analysis);
-        });
-
-        function formatBet(amount) {
-          return amount.toFixed(2) + " €";
-        }
-
-        function updateDisplay(results, analysis) {
-          // Mise à jour de l'affichage des résultats
-          resultsDisplay.innerHTML = "";
-          // Afficher les résultats dans l'ordre inverse (dernier à gauche)
-          results.reverse().forEach((result, index) => {
-            const cell = document.createElement("div");
-            cell.className = `number-cell ${result.color}${
-              index === 0 ? " new-cell" : ""
-            }`;
-            cell.textContent = result.number;
-            resultsDisplay.appendChild(cell);
-          });
-
-          // Mise à jour des statistiques
-          redCount.textContent = analysis.redCount;
-          blackCount.textContent = analysis.blackCount;
-          totalCount.textContent = resultsDisplay.children.length; // Compte simplement le nombre de cellules
-
-          // Mise à jour du graphique
-          updateChart(analysis.redCount, analysis.blackCount);
-
-          // Mise à jour de l'alerte et des recommandations
-          alertArea.style.display = "block";
-
-          // Modifier le message pour inclure le montant formaté
-          if (analysis.recommendation && analysis.betAmount > 0) {
-            analysis.message = analysis.message.replace(
-              /Misez (\d+) pièces? sur/,
-              `Misez ${formatBet(analysis.betAmount)} sur`
-            );
-          }
-
-          // Changement de style selon le type de message
-          if (analysis.patternDetected) {
-            alertMessage.className = "alert alert-success";
-          } else if (analysis.recommendation && analysis.betColor) {
-            alertMessage.className = "alert alert-warning";
-          } else {
-            alertMessage.className = "alert alert-info";
-          }
-
-          // Mise en forme du message avec mise en évidence
-          if (analysis.betAmount) {
-            const parts = analysis.message.split(/Misez ([\d.]+) € sur/);
-            if (parts.length === 3) {
-              const coloredWord = parts[2].trim();
-              const color = coloredWord === "rouge" ? "#dc3545" : "#212529";
-              analysis.message = `${parts[0]}Misez <span class="bet-amount">${parts[1]} €</span> sur <span style="color: ${color}; font-weight: bold;">${coloredWord}</span>`;
-            }
-          }
-
-          alertMessage.innerHTML = analysis.message;
-        }
-
-        function addNumber() {
-          const number = parseInt(numberInput.value);
-          if (isNaN(number) || number < 0 || number > 36) {
-            alert("Veuillez entrer un numéro valide entre 0 et 36");
-            return;
-          }
-
-          try {
-            const analysis = analyzer.addResult(number);
-            const results = analyzer.getCurrentResults();
-            updateDisplay(results, analysis);
-            numberInput.value = "";
-          } catch (error) {
-            alert(error.message);
-          }
-        }
-
-        function resetAnalyzer() {
-          if (confirm("Voulez-vous vraiment réinitialiser l'analyseur ?")) {
-            analyzer.clearResults();
-            resultsDisplay.innerHTML = "";
-            alertArea.style.display = "none";
-            redCount.textContent = "0";
-            blackCount.textContent = "0";
-            totalCount.textContent = "0";
-            numberInput.value = "";
-          }
-        }
-
-        // Gestionnaires d'événements
-        addButton.addEventListener("click", addNumber);
-        navResetButton.addEventListener("click", resetAnalyzer);
-        numberInput.addEventListener("keypress", (e) => {
-          if (e.key === "Enter") {
-            addNumber();
-          }
-        });
-
-        // Focus initial sur l'input
-        numberInput.focus();
-      });
-    </script>
+    <script src="app.js"></script>
   </body>
 </html>
