clean index.html move style into styles.css

--- a/index.html
+++ b/index.html
@@ -14,222 +14,7 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <style>
-      :root {
-        --message-bg-light: rgba(255, 255, 255, 0.95);
-        --message-bg-dark: rgba(33, 37, 41, 0.95);
-      }
-
-      [data-bs-theme="dark"] {
-        --message-bg: var(--message-bg-dark);
-      }
-
-      [data-bs-theme="light"] {
-        --message-bg: var(--message-bg-light);
-      }
-
-      body {
-        padding: 20px;
-        transition: background-color 0.3s ease;
-      }
-
-      .container {
-        max-width: 800px;
-      }
-
-      #resultsDisplay {
-        font-size: 1.5em;
-        margin-bottom: 20px;
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(40px, 1fr));
-        gap: 5px;
-        padding: 10px;
-      }
-
-      .message-container {
-        text-align: center;
-        padding: 20px;
-        margin: 20px 0;
-        border-radius: 8px;
-        background: var(--message-bg);
-        font-size: 1.2em;
-        transition: opacity 0.3s ease-in-out;
-      }
-
-      .number-cell {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        aspect-ratio: 1;
-        width: 100%;
-        min-width: 30px;
-        max-width: 35px;
-        margin: 0;
-        font-size: 0.7em;
-        border-radius: 50%;
-        color: white;
-      }
-
-      /* Animations pour les cellules */
-      .number-cell.new-cell {
-        animation: fadeIn 0.2s ease-out;
-      }
-
-      /* Styles pour les numéros dans resultsDisplay */
-      .number-cell.rouge {
-        background-color: #dc3545;
-      }
-      .number-cell.noir {
-        background-color: #212529;
-      }
-      .number-cell.vert {
-        background-color: #198754;
-      }
-
-      .number-cell.pair {
-        border: 2px solid #007bff;
-      }
-
-      .number-cell.impair {
-        border: 2px solid #6c757d;
-      }
-
-      #alertMessage .rouge {
-        color: #dc3545;
-        font-weight: bold;
-      }
-
-      #alertMessage .noir {
-        color: #212529;
-        font-weight: bold;
-      }
-
-      [data-bs-theme="dark"] #alertMessage .noir {
-        color: #f8f9fa;
-      }
-
-      .bet-color {
-        font-weight: bold;
-        font-size: 1.2em;
-        margin: 0 4px;
-        display: inline-block;
-      }
-
-      .bet-color.rouge {
-        color: #dc3545;
-      }
-
-      .bet-color.noir {
-        color: #212529;
-      }
-
-      [data-bs-theme="dark"] .bet-color.noir {
-        color: #f8f9fa;
-      }
-
-      .bet-amount {
-        font-weight: bold;
-        padding: 2px 8px;
-        border-radius: 4px;
-        background-color: #f8f9fa;
-        border: 1px solid #dee2e6;
-      }
-
-      /* Ajout d'un bouton de thème */
-      .theme-switch {
-        position: fixed;
-        top: 20px;
-        right: 20px;
-      }
-
-      /* Style pour la barre de navigation */
-      .navbar {
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        z-index: 1000;
-        background: var(--message-bg);
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-      }
-
-      /* Ajustement du contenu principal pour la navbar fixe */
-      .main-content {
-        margin-top: 70px;
-      }
-
-      /* Style pour les boutons de la navbar */
-      .navbar .btn {
-        margin: 0 5px;
-        padding: 0.375rem 0.75rem;
-        display: flex;
-        align-items: center;
-        gap: 0.5rem;
-      }
-
-      .navbar .btn i {
-        font-size: 1.1em;
-      }
-
-      /* Transitions pour les boutons */
-      .btn {
-        transition: all 0.2s ease-in-out;
-      }
-
-      .btn:hover {
-        transform: scale(1.05);
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-      }
-
-      /* Media queries pour différentes tailles d'écran */
-      @media (max-width: 576px) {
-        #resultsDisplay {
-          font-size: 1.2em;
-          grid-template-columns: repeat(auto-fill, minmax(30px, 1fr));
-        }
-
-        .container {
-          padding: 10px;
-        }
-
-        .number-cell {
-          font-size: 0.8em;
-        }
-      }
-
-      @media (min-width: 992px) {
-        #resultsDisplay {
-          grid-template-columns: repeat(auto-fill, minmax(35px, 1fr));
-        }
-
-        .number-cell {
-          max-width: 35px;
-          font-size: 0.6em;
-        }
-      }
-
-      /* Keyframes pour le fade-in */
-      @keyframes fadeIn {
-        from {
-          opacity: 0;
-          transform: scale(0.9);
-        }
-        to {
-          opacity: 1;
-          transform: scale(1);
-        }
-      }
-
-      /* Styles pour les badges de statistiques */
-      .badge i {
-        margin-right: 6px;
-      }
-
-      .badge {
-        font-size: 0.9em;
-        padding: 8px 12px;
-      }
-    </style>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <nav class="navbar">
